# model_eval

./: README.md  evaluate_single_model_script.py  example_config.json  example_model_eval.py  model_evaluation.py  setup.cfg  utils.py
examples/: construct_lmdb.py  example_bp.py  example_config.json  example_lmdb.py  example_mcsh.py  example_multiple_train.py  example_sampling.py  example_save_load.py  expected_outputs.txt
examples/MCSH_potential/: C_coredensity_5.g  Cu_totaldensity_5.g  O_totaldensity_7.g
model_eval/: constants.py  evaluate_single_model_script.py  model_evaluation.py  utils.py
