[metadata]
# replace with your username:
name = model_eval
version = 0.0.1
author = Patrick Lai
author_email = patricklai14@gatech.edu
description = Package for performing atomistic model evaluation
long_description = file: README.md
long_description_content_type = text/markdown
url = TODO
project_urls =
    Bug Tracker = TODO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
